--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>org.p2c2e.zag.Main</mainClass>
+							<mainClass>org.p2c2e.zing.swing.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
