--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,19 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<annotationProcessors>
+						<annotationProcessor>org.p2c2e.util.GlkMethodProcessor</annotationProcessor>
+					</annotationProcessors>
+					<showWarnings>true</showWarnings>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
@@ -118,6 +131,12 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.p2c2e</groupId>
+			<artifactId>zag-processor</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
