--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<additionalProjectnatures>
+						<projectnature>org.eclipse.ajdt.ui.ajnature</projectnature>
+						<projectnature>org.eclipse.jdt.core.javanature</projectnature>
+						<projectnature>org.eclipse.m2e.core.maven2Nature</projectnature>
+					</additionalProjectnatures>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
@@ -76,6 +88,39 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.6</version>
+				<configuration>
+					<complianceLevel>1.6</complianceLevel>
+					<outxml>true</outxml>
+					<verbose>true</verbose>
+					<showWeaveInfo>true</showWeaveInfo>
+					<sources>
+						<basedir>src/main/java</basedir>
+						<includes>
+							<include>org/p2c2e/zag/*.java</include>
+						</includes>
+					</sources>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-source</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjtools</artifactId>
+						<version>1.7.3</version>
+						<scope>compile</scope>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
 				<groupId>org.objectstyle.japp</groupId>
 				<artifactId>japp-maven-plugin</artifactId>
 				<version>3.0</version>
@@ -87,7 +132,7 @@
 							<mainClass>org.p2c2e.zing.swing.Main</mainClass>
 							<!-- <icon>src/japplication/resources/My.icns</icon> -->
 							<os>java</os>
-							<jvm>1.5+</jvm>
+							<jvm>1.6+</jvm>
 							<jvmOptions>-Xmx512m</jvmOptions>
 						</configuration>
 						<phase>package</phase>
@@ -176,5 +221,25 @@
 			<version>1.0-groovy-2.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>jul-to-slf4j</artifactId> -->
+		<!-- <version>1.7.7</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 </project>
