--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 		<!-- <artifactId>jul-to-slf4j</artifactId> -->
 		<!-- <version>1.7.7</version> -->
 		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
