--- a/zag-swing/pom.xml
+++ b/zag-swing/pom.xml
@@ -22,8 +22,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
@@ -39,7 +39,7 @@
 							<mainClass>org.p2c2e.zing.swing.Main</mainClass>
 							<!-- <icon>src/japplication/resources/My.icns</icon> -->
 							<os>java</os>
-							<jvm>1.6+</jvm>
+							<jvm>${java.version}+</jvm>
 							<jvmOptions>-Xmx512m</jvmOptions>
 						</configuration>
 						<phase>package</phase>
@@ -84,7 +84,7 @@
 								<mainClass>org.p2c2e.zing.swing.Main</mainClass>
 							</classPath>
 							<jre>
-								<minVersion>1.5.0</minVersion>
+								<minVersion>1.7.0</minVersion>
 								<opts>
 									<opt>-Xmx512M</opt>
 								</opts>
