--- a/zag-core/pom.xml
+++ b/zag-core/pom.xml
@@ -101,5 +101,15 @@
 			<artifactId>zag-processor</artifactId>
 			<version>1.0.8-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jcraft</groupId>
+			<artifactId>jorbis</artifactId>
+			<version>0.0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>de.jarnbjo</groupId>
+			<artifactId>j-ogg-all</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
