--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,14 @@
 	</modules>
 
 	<properties>
-		<app.version>1.0.8</app.version>
+		<app.version>1.1.0</app.version>
 		<java.version>1.7</java.version>
 	</properties>
 
+	<scm>
+		<developerConnection>scm:git:https://github.com/Banbury/zag.git</developerConnection>
+	</scm>
+	
 	<repositories>
 		<repository>
 			<id>mvncentral</id>
@@ -90,7 +94,8 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It 
+					has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -117,6 +122,17 @@
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5</version>
+					<configuration>
+						<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
+						<tagNameFormat>v@{project.version}</tagNameFormat>
+						<pushChanges>false</pushChanges>
 					</configuration>
 				</plugin>
 			</plugins>
