--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.banbury</groupId>
 	<artifactId>zag2</artifactId>
-	<version>1.0.8-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>Zag2</name>
 	<description>An implementation of Glulx for Java</description>
 	<packaging>pom</packaging>
@@ -22,7 +21,8 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/Banbury/zag.git</developerConnection>
-	</scm>
+	  <tag>v1.1.0</tag>
+  </scm>
 	
 	<repositories>
 		<repository>
@@ -117,7 +117,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
