--- a/zag-core/pom.xml
+++ b/zag-core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>de.banbury</groupId>
 		<artifactId>zag2</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>zag-core</artifactId>
 
@@ -98,7 +98,7 @@
 		<dependency>
 			<groupId>de.banbury</groupId>
 			<artifactId>zag-processor</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jcraft</groupId>
