--- a/zag-processor/pom.xml
+++ b/zag-processor/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>de.banbury</groupId>
 		<artifactId>zag2</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<artifactId>zag-processor</artifactId>
 
