--- a/zag-test/pom.xml
+++ b/zag-test/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>de.banbury</groupId>
 		<artifactId>zag2</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<artifactId>zag-test</artifactId>
 
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>de.banbury</groupId>
 			<artifactId>zag-core</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
