--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.banbury</groupId>
 	<artifactId>zag2</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.3-SNAPSHOT</version>
 	<name>Zag2</name>
 	<description>An implementation of Glulx for Java</description>
 	<packaging>pom</packaging>
@@ -21,7 +21,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/Banbury/zag.git</developerConnection>
-	  	<tag>v1.1.2</tag>
+	  	<tag>HEAD</tag>
   	</scm>
 	
 	<repositories>
