--- a/zag-swing/pom.xml
+++ b/zag-swing/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>de.banbury</groupId>
 		<artifactId>zag2</artifactId>
-		<version>1.1.2</version>
+		<version>1.1.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>zag-swing</artifactId>
 	
@@ -11,7 +11,7 @@
 		<dependency>
 			<groupId>de.banbury</groupId>
 			<artifactId>zag-core</artifactId>
-			<version>1.1.2</version>
+			<version>1.1.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
